# ir_remote_homekit_ac

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
ReadMe/: README-ru.md
main/: CMakeLists.txt  app_main.c
main/Libs/ac_command/: ac_command.c  ac_command.h  commands_list.h
main/Libs/internal_led/: internal_led.c  internal_led.h
main/Libs/ir_transceiver/: ir_transceiver.c  ir_transceiver.h
